<resources>
    <string name="app_name">Root Shuttle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="houghton_park_n_ride">Houghton Park\'n\'Ride</string>
    <string name="south_kirkland_park_n_ride">South Kirkland Park\'n\'Ride</string>
    <string name="bellevue_tc">Bellevue Transit Center</string>
    <string name="bus">Bus</string>
    <string name="car">Car</string>
    <string name="bike">Bike</string>
    <string name="start">Start</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="startstop">Start-Stop</string>
    <string name="time">Time to destination</string>
    <string name="time_to_dest_placeholder">30min</string>
    <string name="play_stop">Play-Stop</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="company_name">Company name ex. RootMetrics</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">name@example.com</string>
    <string name="company_code">Company code ex. \"RM123\"</string>
    <string name="password">Password</string>
    <string name="google_plus">google+</string>
    <string name="facebook_login">facebook login</string>
    <string name="or">or</string>
    <string name="next">Next</string>
    <string name="facebook_app_id">1385944978395526</string>
    <string name="dialog_message">Are you sure you want to cancel?\nYour information will not be saved</string>
    <string name="dialog_sign_out">Are you sure you want to sign out</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="yes">YES</string>
    <string name="location_service_disabled">Location Services Disabled</string>
    <string name="enabled_location">
        Location Services Disabled\
        Please enable location services.
    </string>
    <string name="enable">Enable</string>
    <string name="reset_password">reset password</string>
    <string name="change_password">Change Password</string>
    <string name="chevron">carrot</string>
    <string name="my_location">My Location</string>
    <string name="driver_coming">Driver is on his way!</string>
    <string name="app_title"><u>Shuttle Flow</u></string>
</resources>
