<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/dest_one"
        style="@style/destination_block_style"
        android:background="@color/blue"
        android:text="@string/houghton_park_n_ride" />


    <TextView
        android:id="@+id/dest_two"
        style="@style/destination_block_style"
        android:background="@color/purple"
        android:text="@string/south_kirkland_park_n_ride" />

    <TextView
        android:id="@+id/dest_three"
        style="@style/destination_block_style"
        android:background="@color/green"
        android:text="@string/bellevue_tc" />


    <TextView
        android:id="@+id/travel_way_one"
        style="@style/destination_block_style"
        android:background="@color/red"
        android:text="@string/bus" />

    <TextView
        android:id="@+id/travel_way_two"
        style="@style/destination_block_style"
        android:background="@color/teal"
        android:text="@string/car" />

    <TextView
        android:id="@+id/start_transmitting"
        style="@style/destination_block_style"
        android:background="@color/orange"
        android:text="@string/start" />

</LinearLayout>
