<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center|top"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/sign_in"
            style="@style/sign_register_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/sign_in"/>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="#000"/>

        <TextView
            android:id="@+id/register"
            style="@style/sign_register_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/register"/>
    </LinearLayout>

    <TextView
        android:id="@+id/app_title"
        android:textColor="@color/hot_green"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:text="@string/app_name"
        android:layout_width="300dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"/>

    <View
        android:background="@color/hot_green"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="50dp"
        android:text="@string/app_name"
        android:layout_width="200dp"
        android:layout_height="2dp"/>
</RelativeLayout>