<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="13">

        <LinearLayout
            android:id="@+id/google_plus_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:background="@drawable/google_selector"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google"
                android:layout_width="wrap_content"
                android:clickable="false"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/google_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:background="@drawable/btn_normal48"
                android:contentDescription="@string/google_plus" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/socialSeparator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/facebook_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:background="@drawable/facebook_selector"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fb"
                android:contentDescription="@string/facebook_login" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="12">

        <View
            android:layout_width="0dp"
            android:layout_height="2dip"
            android:layout_weight="5"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/or"
            android:textAllCaps="true" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dip"
            android:layout_weight="5"
            android:background="@color/gray" />

        <com.facebook.widget.LoginButton
            android:id="@+id/login_with_facebook"
            android:layout_width="wrap_content"
            android:clickable="false"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</merge>